--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@primeuix/themes": "^1.2.1",
     "@tailwindcss/postcss": "^4.1.11",
     "bootstrap": "^5.3.7",
+    "lucide-angular": "^0.525.0",
     "postcss": "^8.5.6",
     "primeng": "^20.0.0-rc.1",
     "rxjs": "~7.8.0",
