--- a/package.json
+++ b/package.json
@@ -31,13 +31,9 @@
     "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@primeuix/themes": "^1.2.1",
-    "@tailwindcss/postcss": "^4.1.11",
-    "bootstrap": "^5.3.7",
     "lucide-angular": "^0.525.0",
-    "postcss": "^8.5.6",
     "primeng": "^20.0.0-rc.1",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -46,12 +42,15 @@
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2"
   }
 }
