--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@primeuix/themes": "^1.2.1",
+    "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.525.0",
     "primeng": "^20.0.0-rc.1",
     "rxjs": "~7.8.0",
@@ -42,6 +43,7 @@
     "@angular/cli": "^20.1.2",
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^2.2.1",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
