--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@primeuix/themes": "^1.2.1",
     "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.525.0",
-    "primeng": "^20.0.0-rc.1",
+    "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
