--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide-angular": "^0.525.0",
     "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
+    "subdivisions-of-egypt": "^1.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
