--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.1.0",
     "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@microsoft/signalr": "^9.0.6",
     "@primeuix/themes": "^1.2.1",
     "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.525.0",
