export excel report

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@primeuix/themes": "^1.2.1",
+    "@types/file-saver": "^2.0.7",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.525.0",
     "primeng": "^20.0.0",
