--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "outputDirectory": "dist/AKELNY-Front/browser",
   "rewrites": [
     {
+      "source": "/uploads/(.*)",
+      "destination": "http://akelni.tryasp.net/uploads/$1"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "http://akelni.tryasp.net/api/$1"
     },
