--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; connect-src 'self' https://akelni.tryasp.net wss://akelni.tryasp.net; img-src 'self' data: https://res.cloudinary.com https://akelni.tryasp.net;"
+          "value": "default-src 'self'; connect-src 'self' https://akelni.tryasp.net wss://akelni.tryasp.net; img-src 'self' data: https://res.cloudinary.com https://akelni.tryasp.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self';"
         }
       ]
     }
