--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,22 @@
   "rewrites": [
     { "source": "/uploads/(.*)", "destination": "http://akelni.tryasp.net/uploads/$1" },
     { "source": "/api/(.*)", "destination": "http://akelni.tryasp.net/api/$1" },
+    { "source": "/orderHub/(.*)", "destination": "http://akelni.tryasp.net/orderHub/$1" },
+    { "source": "/orderHub", "destination": "http://akelni.tryasp.net/orderHub" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
+  "functions": {
+    "app/api/**/*.js": {
+      "includeFiles": "**"
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; script-src-elem 'self' 'unsafe-inline' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: http://akelni.tryasp.net https://res.cloudinary.com https://lh3.googleusercontent.com https://googleusercontent.com https://www.shutterstock.com https://plus.unsplash.com https://unsplash.com https://wallpapers.com https://images.unsplash.com; connect-src 'self' http://akelni.tryasp.net ws://akelni.tryasp.net https://accounts.google.com https://apis.google.com https://fonts.googleapis.com https://fonts.gstatic.com; frame-src 'self' https://accounts.google.com;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; script-src-elem 'self' 'unsafe-inline' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://akelny-front.vercel.app https://res.cloudinary.com https://lh3.googleusercontent.com https://googleusercontent.com https://www.shutterstock.com https://plus.unsplash.com https://unsplash.com https://wallpapers.com https://images.unsplash.com; connect-src 'self' https://akelny-front.vercel.app wss://akelny-front.vercel.app ws://akelni.tryasp.net wss://akelni.tryasp.net http://akelni.tryasp.net https://accounts.google.com https://apis.google.com https://fonts.googleapis.com https://fonts.gstatic.com; frame-src 'self' https://accounts.google.com;"
         }
       ]
     }
