--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,8 @@
   "outputDirectory": "dist/AKELNY-Front/browser",
   "rewrites": [
     { "source": "/uploads/(.*)", "destination": "http://akelni.tryasp.net/uploads/$1" },
-    { "source": "/api/(.*)", "destination": "http://akelni.tryasp.net/api/$1" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "source": "/api/(.*)", "destination": "http://akelni.tryasp.net/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
     {
